# MDS-VIC_XRay_Challenge

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: ColorTextureHist.ipynb  HOG_SVM.ipynb  ImprovedPTM.ipynb  MetalMaskRandomForest.ipynb  PixelTemplateMatching.ipynb  RandomForest.ipynb  TemplateMatching.ipynb  TwoStageDetector.ipynb  Visualisation.ipynb  experiments.ipynb
report/: report.tex
src/xrss/: dataloader.py  main_model.py  models.py  old_models.py  utils.py
